<resources>
    <string name="app_name">CameraV</string>
	<string name="photo">Photo</string>
	<string name="video">Video</string>
	<string name="menu_all_media">All Media</string>
	<string name="menu_list">List</string>
	<string name="menu_grid">Grid</string>
	<string name="menu_location">Location</string>
	<string name="menu_date">Date</string>
	<string name="connected_to_tor">Connected to Tor</string>
	<string name="not_connected_to_tor">Not connected to Tor</string>
	<string name="you">You</string>
	<string name="notifications">Notifications</string>
	<string name="organizations">Organizations</string>
	<string name="get_in">Get In</string>
	<string name="we_could_not_log">We could not log you in.  Please try again.</string>
	<string name="change_settings"><u>Change Settings</u></string>
	<string name="save"><u>Save</u></string>
	<string name="cancel"><u>Cancel</u></string>
	<string name="log_out">Log Out</string>
	<string name="no_notifications">No notifications.</string>
	<string name="connect_with_organizations">Connect with organizations:</string>
	<string name="delete">Delete</string>
	<string name="rename">Rename</string>
	<string name="export">Export</string>
	<string name="send">Send\u2026</string>
	<string name="your_gallery_is_hungry">Your gallery is hungry for photos and videos.</string>
	<string name="swipe_left_for_cameras">Swipe left for cameras.</string>
	<string name="all_media">All Media</string>
	<string name="share">Share</string>
	<string name="share_secure">Secure Share</string>
	<string name="add_a_quick_note">Add a quick note \u2026</string>
	<string name="untitled">Untitled</string>
	<string name="x_tags">%1$d Tag%2$s</string>
	<string name="x_messages">%1$d Message%2$s</string>
	<string name="x_location">%1$f, %2$f</string>
	<string name="location_unknown">Location unknown</string>
	<string name="send_to_org">Send to Org</string>
	<string name="share_via">Share Via</string>
	<string name="choose_an_organization">Choose an organization:</string>
	<string name="send_encrypted_to_organization">Share encrypted to organization\u2026</string>
	<string name="send_encrypted_to_x">Share encrypted to %1$s</string>
	<string name="sending_encrypted_to_x">Sharing encrypted to %1$s. (Change?)</string>
	<string name="there_are_no_organizations">There are no organizations for you to send to.  Try sharing the media instead.</string>
	<string name="sharing_outside_of_informacam">Sharing outside of %1$s means that your media\'s chain-of-custody can be contested.  Share anyway?</string>
	<string name="export_my_credentials">Export my credentials\u2026</string>
	<string name="send_message">Send message\u2026</string>
	<string name="notes">Notes</string>
	<string name="delete_tag">Delete Tag</string>
	<string name="delete_audio_note">Delete Audio Note</string>
	<string name="unverified">Unverified</string>
	<string name="verified">Verified</string>
	<string name="pull_down_to_wipe">Pull down to wipe your contents</string>
	<string name="or">\u2014 or \u2014</string>
	<string name="please_wait">Please wait\u2026</string>
	<string name="record">Record</string>
	<string name="resume">Resume</string>
	<string name="redo">Redo</string>
	<string name="play">Play</string>
	<string name="resend_credentials">Resend my credentials \u2026</string>
	<string name="retry">Retry</string>
	<string name="your_media_is_being_encoded">Your media is being processed...</string>
	<string name="login_open">Open</string>
	<string name="login_passphrase">Passphrase</string>
	<string name="preferences">Preferences</string>
	<string name="original_images_should_be">Captured photos &amp; video should be stored in:</string>
	<string name="prefs_images_deleted">Encrypted Storage (Slower)</string>
	<string name="prefs_images_saved">Standard Storage (Faster)</string>
	<string name="prefs_lock_screen">Lock screen</string>
	<string name="prefs_lock_screen_on">On</string>
	<string name="prefs_lock_screen_off">Off</string>
	<string name="prefs_panic">Panic Action</string>
	<string name="prefs_panic_wipe_app">Delete entire app</string>
	<string name="prefs_panic_wipe_content">Delete my content</string>
	<string name="prefs_language_title">Language</string>
    <string name="pref_languages_default">System Default</string>
    <string name="pref_languages_en_us">English (US)</string>
    <string name="pref_languages_fr">French</string>
    <string name="pref_languages_es">Spanish</string>
    <string name="pref_languages_ar">Arabic</string>
    <string name="pref_languages_no">Norwegian</string>
    <string name="pref_languages_sv">Swedish</string>
    <string name="pref_languages_pt_PT">Portuguese (Portugal)</string>
    <string name="pref_languages_pt_BR">Portuguese (Brazilian)</string>
    <string name="pref_languages_si_LK">Sinhala (Sri Lanka)</string>
    <string name="pref_languages_tr_TR">Turkish (Turkey)</string>
    <string name="menu_share">Share</string>
    <string name="menu_share_media">Share Media</string>
    <string name="menu_share_meta">Share Metadata</string>
    <string name="menu_share_meta_j3m">Share J3M JSON format</string>
    <string name="menu_share_meta_csv">Share CSV format</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_done">Done</string>
    <string name="menu_save">Save</string>
    <string name="menu_view">View</string>
    <string name="menu_select">Select</string>
    <string name="menu_panic">Panic</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_lock">Lock App</string>
	<string name="menu_view_meta">Metadata</string>
	<string name="menu_view_charts">Charts</string>
	<string name="menu_share_hash">Notarize</string>
	<string name="menu_creds">Share Credentials</string>
	<string name="menu_export_keys">Backup Keys</string>
	<string name="menu_home_gallery_select_all">Select All</string>
	<string name="menu_remote_access">Remote Share</string>
	<string name="menu_remote_access_tor">Web Sharing</string>
	<string name="menu_remote_access_dropbox">Dropbox Sync</string>
    <string name="wizard_welcome">Welcome!</string>
    <string name="wizard_choose_language">Choose a language:</string>
    <string name="wizard_get_started">Get started</string>
    <string name="wizard_step_1_of_2">Step 1 of 2:</string>
    <string name="wizard_create_db">Set up your secure database.</string>
    <string name="wizard_email_optional">Email (optional)</string>
    <string name="wizard_password_dont_match">Passwords do not match =(</string>
    <string name="wizard_password_wrong_format">Your password should be more than 10 characters.</string>
    <string name="wizard_ok_next">Okay, next</string>
    <string name="wizard_step_2_of_2">Step 2 of 2:</string>
    <string name="wizard_take_photo_title">Take 6 boring photos to generate your device key.</string>
    <string name="wizard_key_information">Your key will allow you to be verified, so that you can share seamlessly and securely.</string>
    <string name="wizard_take_photo">Take Photos</string>
    <string name="wizard_take_photo_take">Take</string>
    <string name="wizard_key_is_being_made">Your key is being made, this may take a while.</string>
    <string name="wizard_key_made">Your key has been made.</string>
    <string name="home_audio_note">AUDIO NOTE</string>
    <string name="home_share">SHARE</string>
    <string name="home_gallery_title">Gallery</string>
    <string name="home_gallery_selected">%1$d Selected</string>
    <string name="home_gallery_delete">Delete</string>
    <string name="home_gallery_empty">Your gallery is empty.</string>
	<string name="home_swipe_for_more">Swipe for more</string>
    <string name="editor_tags_form">Add Info</string>
    <string name="editor_tags_add">Add Tags</string>
    <string name="editor_form_edit">Tag Info</string>
    <string name="editor_write_text">Write Text</string>
	<string name="editor_save_text">SAVE TEXT</string>
	<string name="editor_history">History</string>
	<string name="editor_image_taken">TAKEN %1$s</string>
	<string name="editor_history_shared">Shared</string>
	<string name="editor_history_exported">Shared securely</string>
    <string name="audio_saved_saved">Recording saved.</string>
    <string name="audio_saved_info">Audio notes are for your reference only, and will not be shared.</string>
    <string name="audio_saved_ok">OKAY, THANKS!</string>
    <string name="shared_never">Never shared</string>
    <string name="shared_recently">Shared less than a minute ago</string>
    <string name="shared_minutes">Shared %1$d minutes ago</string>
    <string name="shared_minute">Shared %1$d minute ago</string>
    <string name="shared_hours">Shared %1$d hours ago</string>
    <string name="shared_hour">Shared %1$d hour ago</string>
    <string name="shared_days">Shared %1$d days ago</string>
    <string name="shared_day">Shared %1$d day ago</string>
    <string name="filter_all">All Items</string>
    <string name="filter_photos">Photos only</string>
    <string name="filter_videos">Videos only</string>
    <string name="filter_encrypted">Encrypted only</string>
    <string name="filter_external">External Only</string>
    <string name="filter_tagged">Tagged Items</string>
    <string name="filter_shared">Shared Items</string>
    <string name="panic_settings">Panic Settings</string>
    <string name="panic_cancel">Cancel</string>
    <string name="panic_hint">Swipe down to delete the app</string>
    <string name="panic_hint_wipe_content">Swipe down to delete personal data</string>
    <string name="panic_test_successful">Good job! In a real scenario, you would have successfully completed a wipe.</string>
    <string name="prefs_gps_highres">Force GPS High-Res</string>
    <string name="prefs_gps_highres_summary">Ensure you only get location data from the actual GPS satellite network</string>
    <string name="prefs_external_camera">Use External Camera Apps</string>
    <string name="prefs_external_camera_summary">Use only the unencrypted system cameras apps, and not the built-in encrypted camera</string>
    <string name="menu_alwayson">Proof Mode</string>
    <string name="_camerav_notarization_id_">#CameraV Notarization </string>
    <string name="share_from_">"Share from "</string>
    <string name="_id_">" ID:"</string>
    <string name="prefs_export_local">Export Encrypted Media</string>
    <string name="prefs_export_local_summary">Save encrypted media first to external storage when you share them</string>
    <string name="prefs_run_foreground">Keep app in foreground</string>
    <string name="prefs_run_foreground_summary">Ensures the app is not shutdown when you switch to another app</string>
    <string name="prefs_stealth_icon">Enable Alternative Icon</string>
    <string name="prefs_stealth_icon_summary">Hide the CameraV icon and name in launcher, show generic "CV Settings" instead</string>
    <string name="prefs_block_screenshots">Block Screenshots</string>
    <string name="prefs_block_screenshots_summary">Stop other apps and the Android system from taking screenshots of this app</string>
    <string name="light">Light</string>
    <string name="air_pressure">Air Pressure</string>
    <string name="orientation">Orientation</string>
    <string name="motion">Motion</string>
    <string name="camerav_hash_service">Verify Hash</string>
    <string name="app_name_alt">CV Settings</string>
    <string name="wifi_networks">Wifi Networks</string>
    <string name="gps_speed">GPS Speed</string>
    <string name="gps_altitude">GPS Altitude</string>
    <string name="remote_web_access_enabled_at">Remote web access enabled at</string>
    <string name="remote_web_access_disabled">Remote web access disabled</string>
    <string name="web_sharing">Web Sharing</string>
    <string name="deactivate_web_share">Deactivate Web Share</string>
    <string name="activate_web_share">Activate Web Share</string>
    <string name="share_web_address">Share Web Address</string>
</resources>