<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item  android:title="@string/menu_remote_access" 
        android:icon="@drawable/ic_action_backup" android:orderInCategory="98" 
        android:showAsAction="always" android:enabled="true">
        
        <menu>
             <item android:id="@+id/menu_remote_access_tor" android:title="@string/menu_remote_access_tor" 
        android:icon="@drawable/ic_action_backup" android:orderInCategory="98" 
        android:showAsAction="always" android:enabled="true"/>
            <item android:id="@+id/menu_remote_access_dropbox" android:title="@string/menu_remote_access_dropbox" 
        android:icon="@drawable/ic_action_backup" android:orderInCategory="98" 
        android:showAsAction="always" android:enabled="true" android:checkable="true"/>
        </menu>
        </item>
    
    <item android:title="@string/menu_share" android:icon="@drawable/ic_gallery_share"
         android:orderInCategory="99" android:showAsAction="always" android:enabled="true">
        
        <menu>
        	    <item android:id="@+id/menu_share" android:title="@string/menu_share_media" android:orderInCategory="100" android:icon="@drawable/ic_action_share" android:showAsAction="always" android:enabled="true"/>
        	    
        	    <item android:title="@string/menu_share_meta" android:orderInCategory="100" android:icon="@drawable/ic_action_share" android:showAsAction="always" android:enabled="true">
       	  
        	        <menu>
        	    <item 
        	        android:id="@+id/menu_share_meta_j3m" 
        	        android:title="@string/menu_share_meta_j3m" 
        	        android:orderInCategory="100" android:icon="@drawable/ic_action_share" 
        	        android:showAsAction="always" android:enabled="true"/>
       	        <item 
        	        android:id="@+id/menu_share_meta_csv" 
        	        android:title="@string/menu_share_meta_csv" 
        	        android:orderInCategory="100" android:icon="@drawable/ic_action_share" 
        	        android:showAsAction="always" android:enabled="true"/>
       	            
        	    </menu>
        	        </item>
        	    
        	    <item android:id="@+id/menu_share_hash" android:title="@string/menu_share_hash" android:orderInCategory="100" android:icon="@drawable/ic_action_share" android:showAsAction="always" android:enabled="true"/>
        	</menu>
        
    </item>
    <item android:id="@+id/menu_home_gallery_select_all" 
        android:title="@string/menu_home_gallery_select_all" 
        android:icon="@drawable/ic_action_select_all" android:orderInCategory="100" android:showAsAction="always" android:enabled="true"/>
    <item android:id="@+id/menu_home_gallery_delete" 
        android:title="@string/home_gallery_delete" 
        android:icon="@drawable/ic_gallery_trash" android:orderInCategory="100" android:showAsAction="always" android:enabled="true"/>
</menu>
