<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item android:id="@+id/menu_view_meta" android:title="@string/menu_view_meta" android:icon="@android:drawable/ic_menu_info_details" android:orderInCategory="99" android:showAsAction="always" android:enabled="true"/>
    <item android:id="@+id/menu_view_charts" android:title="@string/menu_view_charts" android:icon="@drawable/ic_action_charts" android:orderInCategory="99" android:showAsAction="always" android:enabled="true"/>
    
    <item android:title="@string/menu_share" android:orderInCategory="100" android:icon="@android:drawable/ic_menu_share" android:showAsAction="always" android:enabled="true">
    
        	<menu>
        	    <item android:id="@+id/menu_share" android:title="@string/menu_share_media" android:orderInCategory="100" android:icon="@drawable/ic_action_share" android:showAsAction="always" android:enabled="true"/>
        	    <item android:title="@string/menu_share_meta" android:orderInCategory="100" android:icon="@drawable/ic_action_share" android:showAsAction="always" android:enabled="true">
       	  
        	        <menu>
        	    <item 
        	        android:id="@+id/menu_share_meta_j3m" 
        	        android:title="@string/menu_share_meta_j3m" 
        	        android:orderInCategory="100" android:icon="@drawable/ic_action_share" 
        	        android:showAsAction="always" android:enabled="true"/>
       	        <item 
        	        android:id="@+id/menu_share_meta_csv" 
        	        android:title="@string/menu_share_meta_csv" 
        	        android:orderInCategory="100" android:icon="@drawable/ic_action_share" 
        	        android:showAsAction="always" android:enabled="true"/>
       	            
        	    </menu>
        	        </item>
       	        
       	        <item android:id="@+id/menu_share_hash" android:title="@string/menu_share_hash" android:orderInCategory="100" android:icon="@drawable/ic_action_share" android:showAsAction="always" android:enabled="true"/>
        	</menu>
    </item>
    
    <item android:id="@+id/menu_edit" android:title="@string/menu_edit" android:icon="@android:drawable/ic_menu_edit" android:orderInCategory="101" android:showAsAction="always" android:enabled="true"/>
</menu>
