<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/org.witness.informacam.app"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_dark"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_logo" />

    <org.witness.informacam.app.views.CustomFontTextView
        android:id="@+id/textView1"
        style="@style/WizardH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/wizard_welcome"
        android:textColor="@android:color/white" />

    <org.witness.informacam.app.views.CustomFontTextView
        android:id="@+id/textView2"
        style="@style/WizardH3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/wizard_choose_language"
        android:textColor="@android:color/white" />


    <org.witness.informacam.app.views.DropdownSpinner
        android:id="@+id/languagePopup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/wizard_rounded_background"
        android:divider="@drawable/wizard_divider"
        app:dropdown_background="@drawable/wizard_rounded_background" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_setup_dropdown" />

    </org.witness.informacam.app.views.DropdownSpinner>

    <Button
        android:id="@+id/wizard_commit"
        style="@style/BlueRoundedButton"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/languagePopup"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/wizard_get_started" />
</RelativeLayout>